Flex Gap fix

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -13,9 +13,11 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   .fancybox-button {
     height: 50px;
     width: 50px;
+    right: 5px;
 
     @media @s--less {
-      top: -50px;
+      right: 0;
+      background-color: white;
     }
   }
 }
