--- a/src/less/card.less
+++ b/src/less/card.less
@@ -159,9 +159,10 @@
   }
 
   &__actions {
-    display: flex;
+    display: grid;
     margin: 30px 0 20px;
-    gap: 5px 60px;
+    gap: 5px 20px;
+    grid-template-columns: repeat(2, 1fr);
     flex-wrap: wrap;
     justify-content: flex-end;
     text-transform: uppercase;
@@ -172,7 +173,7 @@
     }
 
     @media @s--less {
-      gap: 5px 30px;
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 
@@ -281,6 +282,14 @@
 
   .card {
     flex: .9 0;
+  }
+
+  &_teacher {
+    .card {
+      @media @s--less {
+        padding-top: 0;
+      }
+    }
   }
 }
 
