--- a/src/less/header.less
+++ b/src/less/header.less
@@ -124,6 +124,7 @@
   .filter-btn {
     cursor: pointer;
     padding: 14px 28px 12px;
+    margin-right: 20px;
     font-size: 13px;
     font-weight: 300;
     text-decoration: none;
@@ -142,6 +143,5 @@
   .right-block {
     display: flex;
     align-items: center;
-    gap: 20px;
   }
 }
